--- a/css/utilidades/cores.css
+++ b/css/utilidades/cores.css
@@ -4,7 +4,7 @@
 :root {
     /* tons de cinza até o preto */
     --c12: #000000;
-    --c11: #111111;
+    --c11: #882e4e;
     --c10: #2e2e2e;
     --c09: #404040;
     --c08: #595959;
