--- a/css/home/espaco.css
+++ b/css/home/espaco.css
@@ -1,86 +1,86 @@
 /* ---- tecenologias ------ */
 
-.tecnologia-bg {
-    background-color: var(--c11);
+.espaco-bg {
+    background-color: var(--p1);
     box-shadow: inset 0 80px var(--w), inset 0 -80px var(--w);
 }
 
-.tecnologia {
+.espaco {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 40px;
 }
 
-.tecnologia-img img {
+.espaco-img img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     object-position: left;
 }
 
-.tecnologia-conteudo {
+.espaco-conteudo {
    padding-top: 160px; 
    padding-bottom: 160px;
 }
 
-.tecnologia-conteudo > span {
+.espaco-conteudo > span {
     display: block;
     margin-bottom: 20px;
 }
 
 
-.tecnologia-conteudo  h2 {
+.espaco-conteudo  h2 {
     margin-bottom: 32px;
 }
 
-.tecnologia-conteudo > p {
+.espaco-conteudo > p {
     margin-bottom: 20px;
 }
 
-.tecnologia a {
+.espaco a {
     margin: 80px;
 }
 
-.tecnologia-vantagens {
+.espaco-vantagens {
     display: flex;
     gap: 40px;
 }
 
-.tecnologia-vantagens h3 {
+.espaco-vantagens h3 {
     margin-bottom: 8px;
     width: max-content;
 }
 
-.tecnologia-vantagens img {
+.espaco-vantagens img {
     width: 24px;
     margin-bottom: 8px;
 }
 
 @media (max-width:800px) {
-    .tecnologia-bg {
+    .espaco-bg {
         box-shadow: initial;
     }
 
-    .tecnologia {
+    .espaco {
         grid-template-columns: 1fr;
     }
 
-    .tecnologia-conteudo {
+    .espaco-conteudo {
         padding-top:60px ;
         padding-bottom: 60px;
     }
 
-    .tecnologia-img {
+    .espaco-img {
         display: none;
     }
 
-    .tecnologia a{
+    .espaco a{
         margin-bottom: 60px;
     }
 }
 
 @media (max-width: 600px) {
-    .tecnologia-vantagens {
+    .espaco-vantagens {
         flex-direction: column;
     }
 }
