--- a/css/home/studio.css
+++ b/css/home/studio.css
@@ -1,26 +1,26 @@
 /* ---- depoimento ---- */
 
-.depoimento {
+.studio {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: var(--p1);
     overflow: hidden;
 }
 
-.depoimento img {
+.studio img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 0px;
 }
 
-.depoimento-conteudo {
+.studio-conteudo {
     padding: 40px 40px 80px 80px;
     align-self: flex-end;
     background: url('../../img/dec/bottom-right-p.svg') no-repeat bottom 40px right 40px;
 }
 
-.depoimento-conteudo p {
+.studio-conteudo p {
     max-width: 32ch;
     font-family: "Merriweather", serif;
     font-style: italic;
@@ -29,41 +29,41 @@
     position: relative;
 }
 
-.depoimento-conteudo p::before,
-.depoimento-conteudo p::after {
+.studio-conteudo p::before,
+.studio-conteudo p::after {
     font-size: 5rem;
     color: var(--p2);
     position: absolute;
 
 }
 
-.depoimento-conteudo p::before {
+.studio-conteudo p::before {
     content: "“";
     left: -50px;
     top: -20px;
 }
 
-.depoimento-conteudo p::after {
+.studio-conteudo p::after {
     content: "”";
 }
 
 @media (min-width: 1200px){
-    .depoimento img {
+    .studio img {
         max-height: 520px;
     }
 }
 
 @media (max-width: 800px) {
-    .depoimento {
+    .studio {
         grid-template-columns: 1fr;
         text-align: center;
     }
 
-    .depoimento img{
+    .studio img{
         max-height: 200px;
     }
 
-    .depoimento-conteudo {
+    .studio-conteudo {
         padding: 40px 20px;
         justify-self: center;
     }
