--- a/css/home/studio.css
+++ b/css/home/studio.css
@@ -17,8 +17,23 @@
 .studio-conteudo {
     padding: 40px 40px 80px 80px;
     align-self: flex-end;
-    background: url('../../img/dec/bottom-right-p.svg') no-repeat bottom 40px right 40px;
+   
 }
+
+.rede-social-do-estudio {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    align-content: center;
+    gap: 8px;
+}
+
+.rede-social-do-estudio a {
+    width: 50px;
+    height: 50px;
+}
+
+
 
 .studio-conteudo p {
     max-width: 32ch;
