--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -31,7 +31,7 @@
 }
 
 @media (max-width: 600px) {
-    .btn-style-1{
+    .btn-style-1 {
         padding: 12px 16px;
         font-size: 1rem;
     }
@@ -48,7 +48,7 @@
     color: var(--p3);
     font: 600 1.125rem/1.35 "Popprins", sans-serif;
     max-width: max-content;
-    
+
 }
 
 .btn-style-2:hover {
@@ -56,7 +56,7 @@
 }
 
 @media (max-width: 600px) {
-    .btn-style-2{
+    .btn-style-2 {
         padding: 12px 16px;
         font-size: 1rem;
     }
@@ -73,7 +73,7 @@
     color: var(--p5);
     font: 600 1.125rem/1.35 "Popprins", sans-serif;
     max-width: max-content;
-    
+
 }
 
 .btn-style-3::after {
@@ -83,7 +83,7 @@
     height: 10px;
     margin-left: 12px;
     background: url("../../img/icones/seta.svg");
-    transition: transform .2s ;
+    transition: transform .2s;
 }
 
 .btn-style-3:hover::after {
@@ -95,7 +95,7 @@
 }
 
 @media (max-width: 600px) {
-    .btn-style-3{
+    .btn-style-3 {
         padding: 12px 16px;
         font-size: 1rem;
     }
@@ -106,17 +106,62 @@
 .link {
     display: inline-block;
     color: var(--p1);
-    font: 500 1.5rem/1.5 "Poppins",sans-serif;
+    font: 500 1.5rem/1.5 "Poppins", sans-serif;
     text-transform: uppercase;
 }
 
 .link::after {
     display: block;
-    content:"";
+    content: "";
     height: 4px;
-    width:100%;
+    width: 100%;
     background-color: currentColor;
 }
 
 .link:hover {
     color: var(--w);
+}
+
+/* botão do whatsapp flutuante */
+
+.btn-whatsapp {
+    position: fixed;
+    bottom: 14px;
+    right: 24px;
+    z-index: 999;
+}
+
+.btn-whatsapp img {
+    max-width: 74px;
+    transition: 0.5s;
+}
+
+.btn-whatsapp img:hover {
+    transform: scale(1.2);
+}
+
+.btn-whatsapp .tooltip-text {
+    visibility: hidden;
+    position: absolute;
+    width: 120px;
+    top: 8px;
+    left: -140px;
+    padding: 4px;
+    border-radius: 8px;
+    text-align: center;
+    background-color: #232224;
+    color: #ffffff;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.btn-whatsapp:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
+@media (max-width: 768px) {
+    .btn-whatsapp img {
+        max-width: 54px;
+    }
+}
